[project]
name = "gpu-scheduler"
version = "0.1.0"
description = "轻量级多服务器 GPU 调度器 — 纯 SSH，任务队列，零部署"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GPU Scheduler Team" }]
keywords = ["gpu", "scheduler", "nvidia", "ssh", "cluster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "asyncssh>=2.14",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
gpu-scheduler = "gpu_scheduler.cli:app"
gpu-sched = "gpu_scheduler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpu_scheduler"]
